[package]
name = "essentia_vpn_plugin"
version = "0.1.0"
edition = "2024"
authors = ["Essentia Services Development <dev@essentia.services>"]
description = "Quantum-safe neural tunnels with PQC encryption"
license = "MIT"
repository = "https://github.com/Essentia-Services-Development/essentia_vpn_plugin"
readme = "README.md"
keywords = ["essentia", "vpn", "pqc", "security", "plugin"]
categories = ["cryptography", "network-programming"]

[dependencies]
essentia_core = { path = "../../core/essentia_core" }
essentia_traits = { path = "../../core/essentia_traits" }
essentia_plugin_system = { path = "../../core/essentia_plugin_system" }
essentia_pqc = { path = "../../services/essentia_pqc" }
essentia_net_plugin = { path = "../essentia_net_plugin" }

[dev-dependencies]

[features]
default = []

[lib]
name = "essentia_vpn_plugin"
path = "src/lib.rs"
