[package]
name = "essentia_vpn_plugin"
description = "Quantum-safe neural tunnels with PQC encryption"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository = "https://github.com/Essentia-Services-Development/essentia_vpn_plugin"
keywords = ["essentia", "vpn", "pqc", "security", "plugin"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core dependencies (workspace inheritance)
essentia_core = { workspace = true }
essentia_traits = { workspace = true }
essentia_plugin_system = { workspace = true }
essentia_pqc = { workspace = true }
essentia_net_plugin = { workspace = true }

[dev-dependencies]

[features]
default = []

[lib]
name = "essentia_vpn_plugin"
path = "src/lib.rs"
